--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,14 +4,37 @@
 # https://aka.ms/yaml
 
 
+# Flutter build
 variables:
   projectDirectory: 'samples'
 trigger:
 - master
-
 jobs:
   - job: Android
     pool:
       vmImage: 'macOS-latest'
-
-
+    steps:
+    - task: FlutterInstall@0
+      inputs:
+        channel: 'stable'
+        version: 'latest'
+    
+    - task: FlutterBuild@0
+      inputs:
+        target: apk
+        projectDirectory: $(projectDirectory)
+  
+    - task: AndroidSigning@3
+      displayName: 'Signing and aligning APK file(s) **/*.apk'
+      inputs:
+        apkFiles: '**/*.apk'
+        apksign: true
+        apksignerKeystoreFile: key.jks
+        apksignerKeystorePassword: $(keypassword)
+        apksignerKeystoreAlias: $(key)
+        apksignerKeyPassword: $(keypassword)
+    - task: CopyFiles@2
+      inputs:
+        contents: '**/*.apk'
+        targetFolder: '$(build.artifactStagingDirectory)'
+    - task: PublishBuildArtifacts@1
