Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,15 +24,15 @@ jobs:
         target: apk
         projectDirectory: $(projectDirectory)
   
-    - task: AndroidSigning@3
-      displayName: 'Signing and aligning APK file(s) **/*.apk'
-      inputs:
-        apkFiles: '**/*.apk'
-        apksign: true
-        apksignerKeystoreFile: key.jks
-        apksignerKeystorePassword: $(keypassword)
-        apksignerKeystoreAlias: $(key)
-        apksignerKeyPassword: $(keypassword)
+    # - task: AndroidSigning@3
+    #   displayName: 'Signing and aligning APK file(s) **/*.apk'
+    #   inputs:
+    #     apkFiles: '**/*.apk'
+    #     apksign: true
+    #     apksignerKeystoreFile: key.jks
+    #     apksignerKeystorePassword: $(keypassword)
+    #     apksignerKeystoreAlias: $(key)
+    #     apksignerKeyPassword: $(keypassword)
     - task: CopyFiles@2
       inputs:
         contents: '**/*.apk'
